<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_bem_vindo">

    <fragment
        android:id="@+id/nav_bem_vindo"
        android:name="com.luanasilva.sewil.ui.bem_vindo.LandingPageFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_landing_page" />

    <fragment
        android:id="@+id/nav_agendamento_manutencao"
        android:name="com.luanasilva.sewil.ui.agendamentomanutencao.AgendamentoManutencaoFragment"
        android:label="@string/menu_agendamento_manutencao_geral"
        tools:layout="@layout/fragment_agendamento_manutencao" />

    <fragment
        android:id="@+id/nav_controle_estoque"
        android:name="com.luanasilva.sewil.ui.controleestoque.ControleEstoqueFragment"
        android:label="@string/menu_controle_estoque"
        tools:layout="@layout/fragment_controle_estoque" />

    <fragment
        android:id="@+id/nav_quartos_limpeza_manutencao"
        android:name="com.luanasilva.sewil.ui.quartoslimpezamanutencao.QuartosLimpezaManutencaoFragment"
        android:label="@string/menu_quartos_limpeza_manutencao"
        tools:layout="@layout/fragment_quartos_limpeza_manutencao" />


</navigation>